# agente-ia-angela

./: .env.example  cert.pem  generate_cert.py  key.pem  refresh_tokens.py  seed_tokens.py
app/: main.py
app/agents/: bank_reconciliation.py  controller.py  grant_compliance.py  orchestrator.py  payment_request.py  payroll_allocation.py  qbo_auditor.py  transaction_coder.py  vendor_onboarding.py
app/api/v1/: router.py
app/core/: config.py  dependencies.py  security.py
app/integrations/quickbooks/: client.py
app/integrations/ramp/: client.py
app/models/: database.py  schemas.py
app/prompts/: modules.py  system.py
app/tools/: asana_tools.py  file_tools.py  qbo_tools.py
docker/: Dockerfile  docker-compose.yml
finance-ops-agent/: .gitignore  Makefile  README.md  pyproject.toml
finance-ops-agent/app/: main.py
finance-ops-agent/app/agents/: base.py  eod_report.py  orchestrator.py  sop_builder.py
finance-ops-agent/app/api/v1/endpoints/: audit.py  chat.py  controller.py  eod.py  integrations.py  payments.py  sops.py  vendors.py
finance-ops-agent/app/core/: config.py  dependencies.py  logging.py
finance-ops-agent/app/integrations/asana/: client.py
finance-ops-agent/app/integrations/quickbooks/: auth.py  client.py
finance-ops-agent/app/models/: database.py
finance-ops-agent/frontend/: .env.example  tailwind.config.js
finance-ops-agent/frontend/src/: App.tsx
finance-ops-agent/frontend/src/components/layout/: PageHeader.tsx  Sidebar.tsx
finance-ops-agent/frontend/src/lib/: api.ts  utils.ts
finance-ops-agent/frontend/src/pages/: ChatPage.tsx  EODPage.tsx  GrantsPage.tsx  PaymentsPage.tsx  SettingsPage.tsx  TransactionsPage.tsx  VendorsPage.tsx
finance-ops-agent/frontend/src/stores/: appStore.ts
finance-ops-agent/static/: index.html
finance-ops-agent/tests/: conftest.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/lib/: api.ts  i18n.ts
frontend/src/pages/: AuditPage.tsx  BankRecPage.tsx  ChatPage.tsx  (+9 more)
(+9 files in other folders)
