[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-ops-agent"
version = "0.1.0"
description = "Finance Operations AI Manager — Nonprofit & For-Profit (QBO + Claude + LangGraph)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # AI / LangGraph
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",

    # Async HTTP
    "httpx>=0.27.0",
    "tenacity>=8.5.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Cache / Sessions
    "redis[asyncio]>=5.1.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # File processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "tabula-py>=2.9.0",

    # Logging
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # OAuth2 (QBO)
    "intuit-oauth>=1.2.4",

    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]
